# Personal_Research

./: .gitignore  GoogleScholarBySerpAPI.ipynb  JAIS_Crawler.ipynb  LLM_Based_Paper_Classifier.ipynb  README.md
01_LLM_Based_Research_Theme_Classifier/: GoogleScholarBySerpAPI.ipynb  GoogleScholarcrawler.ipynb  JAIS_Trend_Analysis.ipynb  LLM_Based_Paper_Classifier.ipynb  Langchain_chatcompletion.ipynb
02_Reusable_LLM_UI/: README.md
02_Reusable_LLM_UI/backend/: main.py
02_Reusable_LLM_UI/backend/models/: schemas.py
02_Reusable_LLM_UI/backend/routes/: chat_routes.py
02_Reusable_LLM_UI/backend/services/: agent_service.py  llm_service.py
02_Reusable_LLM_UI/frontend/src/app/: page.tsx
030_LLM_Interface_test/: main.py  pyproject.toml  test.ipynb
030_LLM_Interface_test/031_Streamlit/: streamlit_test.py
030_LLM_Interface_test/032_Gradio/: app.py  gradio_test.ipynb
030_LLM_Interface_test/035_Chainlit/: chainlit_test.py  test.py
